# pydio-cells-synchronizer

./: README.md  index.html  package.json
src/: App.tsx  Utils.ts  constants.ts  interfaces.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: data.rs  error.rs  etag.rs  main.rs  net.rs  structs.rs
src/components/: IgnoresInput.tsx
src/modals/: CreateTaskModal.tsx  EditTaskModal.tsx  RemoteSelectModal.tsx  SettingDrawer.tsx
src/pages/: LoginPage.tsx  TaskPage.css  TaskPage.tsx
