[package]
name = "pydio-cells-synchronizer"
version = "0.1.0"
description = "A desktop synchronizer for Pydio Cells"
authors = ["Iewnfod"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-all", "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.5.0"
walkdir = "2.5.0"
aws-sdk-s3 = "1.51.0"
aws-config = "1.5.6"
surf = "2.3.2"
sha2 = "0.10.8"
hex = "0.4.3"
md-5 = "0.10.6"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
